--- a/Makefile/Makefile.txt
+++ b/Makefile/Makefile.txt
@@ -6,7 +6,8 @@ test:
 	gcc -o test/test TestDumbExample.c DumbExample.c unity/src/unity.c
 
 main:
-	gcc -o src/main DumbExample.c  // Detta fungerar inte för du har ingen main
+	gcc -o src/main DumbExample.c main.c
 
 test1: TestDumbExample.c DumbExample.c unity/src/unity.c
 	gcc TestDumbExample.c DumbExample.c unity/src/unity.c -o test1
+	
